--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-watch": "~0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-html2js": "~0.2.0",
+    "grunt-ngmin": "0.0.3",
     "grunt-karma": "~0.4.4",
     "node-markdown": "0.1.1",
     "semver": "~2.2.0",
