--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-html2js": "~0.2.0",
     "grunt-ngmin": "0.0.3",
-    "grunt-karma": "~0.4.4",
+    "grunt-karma": "~0.8.3",
     "node-markdown": "0.1.1",
     "semver": "~2.2.0",
-    "shelljs": "~0.2.0"
+    "shelljs": "~0.2.0",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-jasmine": "~0.1.5",
+    "karma-junit-reporter": "~0.2.2"
   },
   "license": "MIT"
 }
