--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@
  before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - npm update -g npm
   - npm install --quiet -g grunt-cli karma
   - npm install
   - bower install
+
 
  script: grunt
